changed the font

--- a/pages/icons/mdi.html
+++ b/pages/icons/mdi.html
@@ -4837,7 +4837,7 @@
                         <i class="mdi mdi-twitter-retweet"></i> mdi mdi-twitter-retweet
                       </div>
                       <div class="col-sm-6 col-md-4 col-lg-3">
-                        <i class="mdi mdi-ubuntu"></i> mdi mdi-ubuntu
+                        <i class="mdi mdi-Inter"></i> mdi mdi-Inter
                       </div>
                       <div class="col-sm-6 col-md-4 col-lg-3">
                         <i class="mdi mdi-umbraco"></i> mdi mdi-umbraco
