--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/tables/basic-table.html">
+              <a class="nav-link" href="add_coaches.html">
                 <i class="mdi mdi-table-large menu-icon"></i>
                 <span class="menu-title">Users</span>
                 
