Users, Exercise and Workout pages
New 2 pages and User page change

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="add_exercise.html">
                 <i class="mdi mdi-bike menu-icon"></i>
                 <span class="menu-title">Exercise</span>
                 
@@ -270,7 +270,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="add_coaches.html">
                 <i class="mdi mdi-account-multiple-outline menu-icon"></i>
                 <span class="menu-title">Users</span>
                 
