Programs page, Edit workout page and styles

--- a/pages/super-admin/add_coaches.html
+++ b/pages/super-admin/add_coaches.html
@@ -63,7 +63,7 @@
                                    <label class="form-control form-check-label" style="border: none; 
                                    font-size: 1.125rem;"><strong>Coaches</strong></label>
                                    <div class="input-group-append">
-                                     <button type="button" class="btn btn-gradient-primary  btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important; vertical-align: middle !important;">Add New Users</button>
+                                     <button type="button" class="btn btnlightpurple  btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important; vertical-align: middle !important;">Add New Users</button>
                                     </div> 
                                   </div>
                                   <div class="input-group">                                   
