--- a/pages/super-admin/add_exercise.html
+++ b/pages/super-admin/add_exercise.html
@@ -72,7 +72,7 @@
                                    <label class="form-control form-check-label" style="border: none; 
                                    font-size: 1.125rem;"><strong>Exercise</strong></label>
                                    <div class="input-group-append">
-                                     <button type="button" class="btn btn-gradient-primary  btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important; vertical-align: middle !important;">Create New Exercise</button>
+                                     <button type="button" class="btn btnlightpurple btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important; vertical-align: middle !important;">Create New Exercise</button>
                                     </div> 
                                   </div>
                                   <div class="input-group">                                   
