--- a/pages/super-admin/add_programs.html
+++ b/pages/super-admin/add_programs.html
@@ -32,36 +32,153 @@
     <div id="baseHeader"></div> 
       <div class="container-fluid page-body-wrapper">
         <div id="side-bar"></div> 
-
-
         <div class="main-panel">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            <!-- content-wrapper ends -->
+          <div class="content-wrapper">           
+            <div class="row">
+              <div class="col-md-9 grid-margin stretch-card">
+                <div class="card">
+                  <div class="card-body">                    
+                    <div class="table-responsive">
+                      <table class="table">
+                        <thead>
+                          <tr>
+                           <div class="search-field d-none d-md-block">
+                            <form class="d-flex align-items-center h-100" action="#">
+  
+                                <div class="input-group" style="border: none; ">                                  
+                                   <label class="form-control form-check-label" style="border: none; 
+                                   font-size: 1.125rem;"><strong>Program</strong></label>
+                                   <div class="input-group-append">
+                                     <button type="button" class="btn btnlightpurple  btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important; vertical-align: middle !important;">Create New Program</button>
+                                    </div> 
+                                  </div>
+                                  <div class="input-group">                                   
+                                    <input type="search" class="form-control" placeholder="Search Your Program Here..." aria-label="Search Program" aria-describedby="basic-addon2" style="padding: 20px 30px !important; border-radius: 15px !important;">
+                             </div>                             
+                            </form>
+                          </div></tr></thead><br>
+                          <div class="row">
+                          <div class="col-md-4 stretch-card grid-margin">
+                            <div class="card  card-img-holder ">
+                              <div class="card-body">
+                                <div class="video-container">
+                                <video controls class="vid1">
+                                  <source src="your_video.mp4" type="video/mp4">
+                                  Your browser does not support the video tag.
+                              </video></div><br>
+                              <h5><span class="fontbackg" >FRONTEND</span></h5>
+                              <h5>Phase 1</h5>
+                              <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div><br>
+                              <div class="description">                                 
+                                <div class="row">
+                                  <div class="col-md-8">                            
+                                  <p class="txt1">17 Workouts</p>
+                                </div>
+                                <div class="col-md-4">                            
+                                  <p class="txt1">331 Users</p>
+                                </div>
+                                </div> 
+                              </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-4 stretch-card grid-margin">
+                            <div class="card  card-img-holder ">
+                              <div class="card-body">
+                                <div class="video-container">
+                                <video controls class="vid1">
+                                  <source src="your_video.mp4" type="video/mp4">
+                                  Your browser does not support the video tag.
+                              </video></div><br>
+                              <h5><span class="fontbackg" >FRONTEND</span></h5>
+                              <h5>Phase 2</h5>
+                              <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div><br>
+                              <div class="description">                                  
+                                <div class="row">
+                                  <div class="col-md-8">                            
+                                  <p class="txt1">17 Workouts</p>
+                                </div>
+                                <div class="col-md-4">                            
+                                  <p class="txt1">331 Users</p>
+                                </div>
+                                </div> 
+                              </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-4 stretch-card grid-margin">
+                            <div class="card  card-img-holder ">
+                              <div class="card-body">
+                                <div class="video-container">
+                                <video controls class="vid1">
+                                  <source src="your_video.mp4" type="video/mp4">
+                                  Your browser does not support the video tag.
+                              </video></div><br>
+                              <h5><span class="fontbackg" >FRONTEND</span></h5>
+                              <h5>Phase 3</h5>
+                              <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div><br>
+                              <div class="description">   
+                                <div class="row">
+                                  <div class="col-md-8">                            
+                                  <p class="txt1">17 Workouts</p>
+                                </div>
+                                <div class="col-md-4">                            
+                                  <p class="txt1">331 Users</p>
+                                </div>
+                                </div> 
+                              </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>                                                                                                                               
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </div>            
+               <div class="col-md-3 grid-margin stretch-card">
+                <div class="card" style="height: fit-content;">
+               <div class="card-body">
+                    <h4 class="card-title">Add Program</h4>                    
+                    <form class="forms-sample">
+                      <div class="form-group">
+                            <select class="form-control form-control-lg" id="exampleFormControlSelect2" style="padding: 18px 30px !important; border-radius: 15px !important;">
+                              <option>Select Membership</option>
+                              <option>United States of America</option>
+                              <option>United Kingdom</option>
+                              <option>India</option>                              
+                            </select>
+                          </div>
+                      <div class="form-group">                        
+                        <input type="text" class="form-control" id="program" placeholder="Program Name" style="padding: 18px 30px !important; border-radius: 15px !important;">
+                      </div>
+                      <div class="form-group">                       
+                        <input type="text" class="form-control" id="desscription" placeholder="Description" style="padding: 18px 30px !important; border-radius: 15px !important;">
+                      </div>                                       
+                      <div class="form-group">                       
+                        <input type="file" name="img[]" class="file-upload-default">
+                        <div class="input-group col-xs-12">
+                          <input type="text" class="form-control file-upload-info" disabled placeholder="Add Thumbnail" style="padding: 18px 30px !important; border: none;">
+                          <span class="input-group-append">
+                            <button class="file-upload-browse btn btn-gradient-primary" type="button" style="padding: 12px 30px !important; border-radius: 25px !important;">Browse</button>
+                          </span>
+                        </div>
+                      </div>                                                             
+                      <button type="submit" class="btn1 btn-gradient-primary me-2" style="width: 100%; border-radius: 25px;">Save</button>                                          
+                    </form>
+                  </div>
+                </div>
+              </div>              
+            </div>
+          </div>
+          <!-- content-wrapper ends -->
           <!-- partial:partials/_footer.html -->
           <footer class="footer">
             <div class="container-fluid d-flex justify-content-between">
@@ -70,7 +187,7 @@
             </div>
           </footer>
           <!-- partial -->
-        </div>
+        </div>              
         <!-- main-panel ends -->
       </div>
       <!-- page-body-wrapper ends -->
