--- a/pages/super-admin/add_exercise.html
+++ b/pages/super-admin/add_exercise.html
@@ -151,15 +151,15 @@
                       <div class="form-group">
                         <input type="text" class="form-control" id="exampleInputEmail3" placeholder="Description" style="padding: 18px 30px !important; border-radius: 15px !important;">
                       </div>                   
-                      <div class="form-group">                       
-                        <input type="file" name="img[]" class="file-upload-default">
+                      <div class="form-group">
+                        <input type="file" name="img[]" class="file-upload-default" id="fileInput">
                         <div class="input-group col-xs-12">
-                          <input type="text" class="form-control file-upload-info" disabled placeholder="Add thumbnail" style="padding: 18px 30px !important; border: none;">
-                          <span class="input-group-append">
-                            <button class="file-upload-browse btn btn-gradient-primary" type="button" style="padding: 12px 30px !important; border-radius: 25px !important;">Browse</button>
-                          </span>
+                            <input type="text" class="form-control file-upload-info" disabled placeholder="Add Thumbnail" style="padding: 18px 30px !important; border: none;">
+                            <span class="input-group-append">
+                                <button class="file-upload-browse btn btn-gradient-primary" type="button" onclick="$('#fileInput').click();" style="padding: 12px 30px !important; border-radius: 25px !important;">Browse</button>
+                            </span>
                         </div>
-                      </div>
+                    </div>
                    
                      
                       <button type="submit" class="btn1 btn-gradient-primary me-2" style="width: 100%; border-radius: 25px;">Save</button>
