Add a few pages

--- a/pages/super-admin/sidebar.html
+++ b/pages/super-admin/sidebar.html
@@ -100,20 +100,20 @@
       <div class="card mt-3" style="margin-left: 20px; margin-right: 20px;">
         <h4 class="font-weight-bold mt-3 p-3 pb-0">Support</h4>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="./support_tickets.html">
             <i class="mdi mdi-ticket menu-icon"></i>
             <span class="menu-title">Support Tickets</span>
             
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="./report_generation.html">
             <i class="mdi mdi-chart-bar menu-icon"></i>
             <span class="menu-title">Report Generation</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-bs-toggle="collapse" href="#" aria-expanded="false" aria-controls="general-pages">
+          <a class="nav-link" data-bs-toggle="collapse" href="./payment.html" aria-expanded="false" aria-controls="general-pages">
             <i class="mdi mdi-cash-multiple menu-icon"></i>
             <span class="menu-title">Payment</span>
           </a>
