Fix link issues

--- a/pages/super-admin/add_memberships.html
+++ b/pages/super-admin/add_memberships.html
@@ -20,10 +20,10 @@
     <script src="../../assets/js/jquery-3.3.1.min.js"></script>
     <script> 
       $(function(){
-        $("#baseHeader").load("base-header.html"); 
+        $("#baseHeader").load("../../base-header.html"); 
       });
       $(function(){
-        $("#side-bar").load("sidebar.html"); 
+        $("#sidebar").load("../../sidebar.html"); 
       });
   </script>
   </head>
@@ -31,7 +31,7 @@
   <body>
     <div id="baseHeader"></div> 
       <div class="container-fluid page-body-wrapper">
-        <div id="side-bar"></div> 
+        <div id="sidebar"></div>
         <div class="main-panel">
           <div class="content-wrapper">           
             <div class="row">
