--- a/pages/super-admin/add_memberships.html
+++ b/pages/super-admin/add_memberships.html
@@ -59,7 +59,7 @@
                           <div class="row">
                           <div class="col-md-4 stretch-card grid-margin">
                             <div class="card  card-img-holder ">
-                              <div class="card-body">
+                              <div class="card-body mini-marg">
                                 <div class="video-container">
                                 <video controls class="vid1">
                                   <source src="your_video.mp4" type="video/mp4">
@@ -88,7 +88,7 @@
                           </div>
                           <div class="col-md-4 stretch-card grid-margin">
                             <div class="card  card-img-holder ">
-                              <div class="card-body">
+                              <div class="card-body mini-marg">
                                 <div class="video-container">
                                 <video controls class="vid1">
                                   <source src="your_video.mp4" type="video/mp4">
@@ -117,7 +117,7 @@
                           </div>
                           <div class="col-md-4 stretch-card grid-margin">
                             <div class="card  card-img-holder ">
-                              <div class="card-body">
+                              <div class="card-body mini-marg">
                                 <div class="video-container">
                                 <video controls class="vid1">
                                   <source src="your_video.mp4" type="video/mp4">
