--- a/pages/super-admin/report_generation.html
+++ b/pages/super-admin/report_generation.html
@@ -291,44 +291,44 @@
                     <tbody>
                       <tr>
                         <div class="input-group">                                   
-                          <input type="search" class="form-control" placeholder="Search" aria-label="Search " aria-describedby="basic-addon2" style="padding: 20px 30px !important; border-radius: 15px !important;">
+                          <input type="search" class="form-control" placeholder="Search" aria-label="Search " aria-describedby="basic-addon2" style="padding: 15px 30px !important; border-radius: 15px !important;">
                    </div>
                       </tr>
                       <tr>
                         <td class="card-label1"><label class="card-label">Sales Report<br>
                         Sarahone!@gmail.com</label></td>
-                        <td><button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 25px !important; border-radius: 25px !important;">View</button></td>                                                                                                                                       
+                        <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Open</button></td>                                                                                                                                       
                       </tr>
                       <tr>
                         <td class="card-label1"><label class="card-label">Sales Report<br>
                         Sarahone!@gmail.com</label></td>
-                        <td><button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 25px !important; border-radius: 25px !important;">View</button></td>                                                                                                                                       
+                        <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw" >Open</button></td>                                                                                                                                       
                       </tr>
                       <tr>
                         <td class="card-label1"><label class="card-label">Sales Report<br>
                         Sarahone!@gmail.com</label></td>
-                        <td><button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 25px !important; border-radius: 25px !important;">View</button></td>                                                                                                                                       
+                        <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw" >Open</button></td>                                                                                                                                       
                       </tr>
                       <tr>
                         <td class="card-label1"><label class="card-label">Sales Report<br>
                         Sarahone!@gmail.com</label></td>
-                        <td><button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 25px !important; border-radius: 25px !important;">View</button></td>                                                                                                                                       
+                        <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw" >Open</button></td>                                                                                                                                       
                       </tr>
                       <tr>
                         <td class="card-label1"><label class="card-label">Sales Report<br>
                         Sarahone!@gmail.com</label></td>
-                        <td><button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 25px !important; border-radius: 25px !important;">View</button></td>                                                                                                                                       
+                        <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw" >Open</button></td>                                                                                                                                       
                       </tr>                                                         
                       
                       <tr>
                         <td class="card-label1"><label class="card-label">Sales Report<br>
                         Sarahone!@gmail.com</label></td>
-                        <td><button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 25px !important; border-radius: 25px !important;">View</button></td>                                                                                                                                       
+                        <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw" >Open</button></td>                                                                                                                                       
                       </tr>
                       <tr>
                         <td class="card-label1"><label class="card-label">Sales Report<br>
                         Sarahone!@gmail.com</label></td>
-                        <td><button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 25px !important; border-radius: 25px !important;">View</button></td>                                                                                                                                       
+                        <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw" >Open</button></td>                                                                                                                                       
                       </tr>
                  
                     </tbody>
