--- a/pages/super-admin/add_users.html
+++ b/pages/super-admin/add_users.html
@@ -38,9 +38,9 @@
           <div class="content-wrapper">
             
             <div class="row">
-              <div class="col-md-8 grid-margin stretch-card">
-                <div class="card">
-                  <div class="card-body">                    
+              <div class="col-md-8 grid-margin">
+                <!-- <div class="card">
+                  <div class="card-body">                     -->
                     <div class="table-responsive">
                       <table class="table">
                         <thead>
@@ -72,7 +72,7 @@
                                david@gmail.com
                             </td>
                             <td  style="width: 100%;"></td><td style="width: 100%;"></td>
-                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Edit</button></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
                           </tr>
                           <tr>
                             <td>
@@ -80,7 +80,7 @@
                               stella@gmail.com
                             </td>
                             <td></td><td></td>
-                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Edit</button> </td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button> </td>
                           </tr>
                           <tr>
                             <td>
@@ -88,7 +88,7 @@
                               Marina@gmail.com
                             </td>
                             <td></td><td></td>
-                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Edit</button></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
                           </tr>
                           <tr>
                             <td>
@@ -96,7 +96,7 @@
                               Marina@gmail.com
                             </td>
                             <td></td><td></td>
-                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Edit</button></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
                           </tr>
                           <tr>
                             <td>
@@ -104,13 +104,13 @@
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
-                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Edit</button></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
                           </tr>
                         </tbody>
                       </table>
                     </div>
-                  </div>
-                </div>
+                  <!-- </div>
+                </div> -->
               </div>
              
                <div class="col-md-4 grid-margin stretch-card">
@@ -155,26 +155,26 @@
                       </div>
                       <h5 class="card-title1">Body Composition</h5> 
                       <div class="form-group">                       
-                        <input type="text" class="form-control" id="calories" placeholder="Calories" >
+                        <input type="text" class="form-control inputfieldform" id="calories" placeholder="Calories" >
                       </div>
                       <div class="form-group">                       
-                        <input type="text" class="form-control" id="bodyfat" placeholder="Estimated Bodyfat">
+                        <input type="text" class="form-control inputfieldform" id="bodyfat" placeholder="Estimated Bodyfat">
                       </div>
                       <div class="form-group">                       
-                        <input type="text" class="form-control" id="weight" placeholder="weight (Kg)">
+                        <input type="text" class="form-control inputfieldform" id="weight" placeholder="weight (Kg)">
                       </div>
                       <div class="form-group">                      
-                        <select class="form-control" id="Activity_level" placeholder="Activity level">
+                        <select class="form-control inputfieldform" id="Activity_level" placeholder="Activity level">
                             <option>Activity Level</option>
                           <option>Level 1</option>
                           <option>Level 2</option>
                         </select>
                       </div>
                       <div class="form-group">                       
-                        <input type="text" class="form-control" id="Height" placeholder="Height">
+                        <input type="text" class="form-control inputfieldform" id="Height" placeholder="Height">
                       </div>
                       <div class="form-group">                    
-                        <select class="form-control" id="Conversion_System" placeholder="Preferred Conversion System">
+                        <select class="form-control inputfieldform" id="Conversion_System" placeholder="Preferred Conversion System">
                             <option>Prefered Conversion System</option>
                           <option>System 1</option>
                           <option>System 2</option>
@@ -185,7 +185,7 @@
                         <div class="input-group col-xs-12">
                             <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Front Picture" style="padding: 18px 30px !important; border: none;">
                             <span class="input-group-append">
-                                <button class="file-upload-browse btn btn-gradient-primary" type="button" onclick="$('#fileInput').click();" style="padding: 12px 30px !important; border-radius: 25px !important;">Browse</button>
+                                <button class="file-upload-browse btn1 btn-gradient-primary" type="button" onclick="$('#fileInput').click();">Browse</button>
                             </span>
                         </div>
                     </div>
@@ -194,7 +194,7 @@
                       <div class="input-group col-xs-12">
                           <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Back Picture" style="padding: 18px 30px !important; border: none;">
                           <span class="input-group-append">
-                              <button class="file-upload-browse btn btn-gradient-primary" type="button" onclick="$('#fileInput').click();" style="padding: 12px 30px !important; border-radius: 25px !important;">Browse</button>
+                              <button class="file-upload-browse btn1 btn-gradient-primary" type="button" onclick="$('#fileInput').click();">Browse</button>
                           </span>
                       </div>
                   </div>
@@ -203,7 +203,7 @@
                     <div class="input-group col-xs-12">
                         <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Left Side Picture" style="padding: 18px 30px !important; border: none;">
                         <span class="input-group-append">
-                            <button class="file-upload-browse btn btn-gradient-primary" type="button" onclick="$('#fileInput').click();" style="padding: 12px 30px !important; border-radius: 25px !important;">Browse</button>
+                            <button class="file-upload-browse btn1 btn-gradient-primary" type="button" onclick="$('#fileInput').click();">Browse</button>
                         </span>
                     </div>
                 </div>
@@ -212,7 +212,7 @@
                   <div class="input-group col-xs-12">
                       <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Right Side Picture" style="padding: 18px 30px !important; border: none;">
                       <span class="input-group-append">
-                          <button class="file-upload-browse btn btn-gradient-primary" type="button" onclick="$('#fileInput').click();" style="padding: 12px 30px !important; border-radius: 25px !important;">Browse</button>
+                          <button class="file-upload-browse btn1 btn-gradient-primary" type="button" onclick="$('#fileInput').click();">Browse</button>
                       </span>
                   </div>
               </div>
@@ -223,7 +223,7 @@
                         <div class="input-group col-xs-12">
                           <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Right Side Picture" style="padding: 18px 30px !important; border: none;">
                           <span class="input-group-append">
-                            <button class="file-upload-browse btn btn-gradient-primary" type="button" style="padding: 12px 30px !important; border-radius: 25px !important;">Browse</button>
+                            <button class="file-upload-browse btn1 btn-gradient-primary" type="button" >Browse</button>
                           </span>
                         </div>
                       </div>
