--- a/pages/super-admin/add_users.html
+++ b/pages/super-admin/add_users.html
@@ -134,7 +134,7 @@
                         <div class="input-group col-xs-12">
                             <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Profile Image" style="padding: 18px 30px !important; border: none;">
                             <span class="input-group-append">
-                                <button class="file-upload-browse btn btn-gradient-primary" type="button" onclick="$('#fileInput').click();" style="padding: 12px 30px !important; border-radius: 25px !important;">Browse</button>
+                                <button class="file-upload-browse btn1 btn-gradient-primary" type="button" onclick="$('#fileInput').click();">Browse</button>
                             </span>
                         </div>
                     </div>
