--- a/pages/super-admin/edit_users.html
+++ b/pages/super-admin/edit_users.html
@@ -29,10 +29,12 @@
   </head>
 
   <body>
+    
     <div id="baseHeader"></div> 
-      <div class="container-fluid page-body-wrapper">
-        <div id="sidebar"></div>
 
+
+      <div class="container-fluid page-body-wrapper">
+        <div id="side-bar"></div> 
 
         <div class="main-panel">
           <div class="content-wrapper">
@@ -108,6 +110,11 @@
                         <div class="col-md-1">                      
                         </div> 
                         <div class="col-md-7">
+                            <div class="row">
+                                <div class="col-md-4"><img src="../../assets/images/faces/badge1.png" class="me-2" alt="image"> </div>
+                                <div class="col-md-4"><img src="../../assets/images/faces/badge2.png" class="me-2" alt="image"> </div>
+                                <div class="col-md-4"><img src="../../assets/images/faces/badge3.png" class="me-2" alt="image"> </div>
+                            </div><br>
                             <div class="row">
                                 <div class="col-md-4"><img src="../../assets/images/faces/badge1.png" class="me-2" alt="image"> </div>
                                 <div class="col-md-4"><img src="../../assets/images/faces/badge2.png" class="me-2" alt="image"> </div>
@@ -274,7 +281,7 @@
                <div class="col-md-4 grid-margin stretch-card">
                 <div class="card">
                <div class="card-body">
-                    <h4 class="card-title">Edit User</h4>                    
+                    <h5 class="card-title">Edit User</h5>                    
                     <form class="forms-sample">
                       <div class="form-group">                        
                         <input type="text" class="form-control inputfieldform" id="exampleInputfName1" placeholder="First Name">
