--- a/pages/super-admin/report_generation.html
+++ b/pages/super-admin/report_generation.html
@@ -448,9 +448,11 @@
       <!-- page-body-wrapper ends -->
     </div>
     <!-- container-scroller -->
-    
+    </div>
+ 
+  
 
-    <!-- container-scroller -->
+    
     <script src="../../assets/js/jquery-3.3.1.min.js"></script>
     <script src="../../assets/js/bootstrap.min.js"></script>
     <script src="../../assets/js/jquery.nice-select.min.js"></script>
